<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/layoutPrincipal">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:paddingTop="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_gravity="center"/>

        <EditText
            android:paddingTop="200sp"
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduzca_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduzca_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/boton"
            android:text="@string/entrar"/>

        <Button
            android:id="@+id/buttonRegistro"
            style="@style/boton"
            android:text="@string/registarse"/>
    </LinearLayout>
    
</RelativeLayout>
