<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    style="@style/layoutPrincipal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/botonera">

        <Button
            android:id="@+id/selecImg"
            android:drawableStart="@drawable/select"
            android:text="@string/seleccionar_imagen"
            style="@style/botonSecundario"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/subirImg"
            android:drawableStart="@drawable/upload"
            android:text="@string/subir_imagen"
            style="@style/botonSecundario"
            android:layout_weight="1"/>
    </LinearLayout>

    <EditText
        android:id="@+id/textFoto"
        android:layout_below="@id/botonera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_de_la_imagen"/>

    <ImageView
        android:id="@+id/visorImg"
        android:layout_below="@+id/textFoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/camera"/>
</RelativeLayout>